# Inverse_Kinematic_in_ROS

./: .gitignore
src/ai_core/: CMakeLists.txt  package.xml  setup.py
src/ai_core/launch/: aicore_launch.launch
src/ai_core/msg/: ArmCoreToRobotarm.msg  BoschSensorMessage.msg
src/ai_core/scripts/: DataClass.py  convertFuncs.py  eth_schnittstelle.py
src/can_pkg/: CMakeLists.txt  package.xml
src/can_pkg/scripts/: can_server.py  can_testlistener.py
src/can_pkg/srv/: SendCAN.srv  SendUART.srv
src/frost_arm_chain_ikfast_plugin/: CMakeLists.txt  frost_arm_chain_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/frost_arm_chain_ikfast_plugin/src/: frost_arm_chain_ikfast_moveit_plugin.cpp  frost_arm_chain_ikfast_solver.cpp
src/frost_inverse_kinematic_ikfast_plugin/: CMakeLists.txt  frost_inverse_kinematic_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/frost_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/frost_moveit_config/config/: frost.srdf  (+5 more)
src/frost_robot_arm/: CMakeLists copy.txt  CMakeLists.txt  package.xml
src/horizon_ethernet_interface/: CMakeLists.txt  config.py  connection_pipeline.py  ethernet_Robotarm.py  ethernet_Robotarm_connection_to_Groundstation.py  ethernet_daniel.py  ethernet_interface.py  ethernet_interface_alt.py  map_ethernet_interface.py  markerMergeChecker.py  one_time_publisher.py  package.xml  readme.txt  udp_tx_rx_datastructure.py
src/moveit_frost_robot_arm/: .setup_assistant  CMakeLists.txt  package.xml
src/uart_pkg/: CMakeLists.txt  package.xml
(+109 files in other folders)
